--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
             <h4>measurement to label size</h4>
           </div>
           <div class="row measurement">
-            <p class="blkDot">87-91 cm<span>x small</span></p>
-            <p class="blkDot">92-96 cm<span>small</span></p>
-            <p class="blkDot">97-101 cm<span>medium</span></p>
+            <p class="blkDot">87-91 cm <span>x small</span></p>
+            <p class="blkDot">92-96 cm <span>small</span></p>
+            <p class="blkDot">97-101 cm <span>medium</span></p>
             <p class="blkDot">102-106 cm<span>large</span></p>
             <p class="blkDot">107-111 cm<span>x large</span></p>
-            <p class="blkDot">112-116 cm<span>small</span></p>
+            <p class="blkDot">112-116 cm<span>2x large</span></p>
           </div>
           <div class="row "><a class="btn mrp-btn-black"
               href="https://www.mrp.com/ladies/shop-by-category/underwear?mrp_online_sub_category=1987"
