--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
 </head>
 
 <body>
-
+<style>
+  .underwear101 .four .blkDot {
+    color: #000;
+    background-color: #E7C6C3;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    display: inline-block;
+    font-size: 40px;
+    padding-top: 9px;
+    font-weight: 700;
+}
+  </style>
 
   <link href="https://www.mrp.com/cdn/01/assets/resources/slick/css/slick.css" rel="stylesheet" type="text/css" />
   <link href="https://www.mrp.com/cdn/01/assets/resources/slick/css/slick-theme.css" rel="stylesheet" type="text/css" />
