--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
     padding-top: 9px;
     font-weight: 700;
 }
+  
+  @media (max-width: 767px)
+{
+ .underwear101 .nine .measurement {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+} 
+  .underwear101 .nine .measurement p.blkDot:first-child {
+    grid-column: 1/2;
+}
+  }
+  
   </style>
 
   <link href="https://www.mrp.com/cdn/01/assets/resources/slick/css/slick.css" rel="stylesheet" type="text/css" />
